--- a/src/css/HomeContent.css
+++ b/src/css/HomeContent.css
@@ -16,3 +16,7 @@
 .no-vis {
   visibility: hidden;
 }
+
+@media screen and (max-width: 700px) and (-webkit-min-device-pixel-ratio: 2) {
+  .text { font-size: 36px; }
+}
